--- a/Module 2 - EDA and Data Visualization/03 - Probability and Statistics/3.6 Standard Normal Variate and Standardization.ipynb
+++ b/Module 2 - EDA and Data Visualization/03 - Probability and Statistics/3.6 Standard Normal Variate and Standardization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "       34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -423,16 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a6e76c6bc8>]"
+       "[<matplotlib.lines.Line2D at 0x245df668848>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -542,16 +542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a6e770b1c8>]"
+       "[<matplotlib.lines.Line2D at 0x245df620908>]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -574,16 +574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a6e77b4c48>]"
+       "[<matplotlib.lines.Line2D at 0x245df679188>]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -646,16 +646,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a6e77fa188>]"
+       "[<matplotlib.lines.Line2D at 0x245df41e348>]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -717,16 +717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a6e785ff48>]"
+       "[<matplotlib.lines.Line2D at 0x245df361d08>]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -749,16 +749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a6e784d308>]"
+       "[<matplotlib.lines.Line2D at 0x245df280408>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -782,10 +782,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(x_dash) < 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1.7148160424389374,\n",
+       " -1.6801732941068377,\n",
+       " -1.6455305457747378,\n",
+       " -1.6108877974426383,\n",
+       " -1.5762450491105384,\n",
+       " -1.5416023007784387,\n",
+       " -1.5069595524463388,\n",
+       " -1.4723168041142392,\n",
+       " -1.4376740557821392,\n",
+       " -1.4030313074500396,\n",
+       " -1.3683885591179397,\n",
+       " -1.3337458107858402,\n",
+       " -1.2991030624537403,\n",
+       " -1.2644603141216406,\n",
+       " -1.229817565789541,\n",
+       " -1.1951748174574413,\n",
+       " -1.1605320691253416,\n",
+       " -1.1258893207932417,\n",
+       " -1.091246572461142,\n",
+       " -1.056603824129042,\n",
+       " -1.0219610757969424,\n",
+       " -0.9873183274648426,\n",
+       " -0.9526755791327428,\n",
+       " -0.918032830800643,\n",
+       " -0.8833900824685434,\n",
+       " -0.8487473341364437,\n",
+       " -0.8141045858043439,\n",
+       " -0.7794618374722441,\n",
+       " -0.7448190891401443,\n",
+       " -0.7101763408080447,\n",
+       " -0.6755335924759449,\n",
+       " -0.6408908441438451,\n",
+       " -0.6062480958117454,\n",
+       " -0.5716053474796456,\n",
+       " -0.5369625991475458,\n",
+       " -0.5023198508154461,\n",
+       " -0.46767710248334643,\n",
+       " -0.4330343541512467,\n",
+       " -0.3983916058191469,\n",
+       " -0.3637488574870471,\n",
+       " -0.3291061091549473,\n",
+       " -0.2944633608228476,\n",
+       " -0.25982061249074795,\n",
+       " -0.22517786415864818,\n",
+       " -0.19053511582654842,\n",
+       " -0.15589236749444862,\n",
+       " -0.12124961916234885,\n",
+       " -0.08660687083024907,\n",
+       " -0.051964122498149475,\n",
+       " -0.0173213741660497,\n",
+       " 0.017321374166050084,\n",
+       " 0.05196412249814986,\n",
+       " 0.08660687083024965,\n",
+       " 0.12124961916234943,\n",
+       " 0.1558923674944492,\n",
+       " 0.19053511582654897,\n",
+       " 0.22517786415864877,\n",
+       " 0.25982061249074856,\n",
+       " 0.29446336082284796,\n",
+       " 0.3291061091549477,\n",
+       " 0.3637488574870475,\n",
+       " 0.3983916058191473,\n",
+       " 0.4330343541512471,\n",
+       " 0.4676771024833468,\n",
+       " 0.5023198508154466,\n",
+       " 0.5369625991475464,\n",
+       " 0.5716053474796462,\n",
+       " 0.606248095811746,\n",
+       " 0.6408908441438458,\n",
+       " 0.6755335924759455,\n",
+       " 0.7101763408080453,\n",
+       " 0.7448190891401447,\n",
+       " 0.7794618374722445,\n",
+       " 0.8141045858043443,\n",
+       " 0.848747334136444,\n",
+       " 0.8833900824685438,\n",
+       " 0.9180328308006436,\n",
+       " 0.9526755791327434,\n",
+       " 0.9873183274648432,\n",
+       " 1.0219610757969428,\n",
+       " 1.0566038241290427,\n",
+       " 1.0912465724611424,\n",
+       " 1.1258893207932423,\n",
+       " 1.160532069125342,\n",
+       " 1.1951748174574415,\n",
+       " 1.2298175657895412,\n",
+       " 1.264460314121641,\n",
+       " 1.2991030624537407,\n",
+       " 1.3337458107858406,\n",
+       " 1.3683885591179403,\n",
+       " 1.4030313074500402,\n",
+       " 1.43767405578214,\n",
+       " 1.4723168041142396,\n",
+       " 1.5069595524463395,\n",
+       " 1.5416023007784392,\n",
+       " 1.576245049110539,\n",
+       " 1.6108877974426383,\n",
+       " 1.6455305457747382,\n",
+       " 1.680173294106838,\n",
+       " 1.7148160424389378]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_dash"
+   ]
   },
   {
    "cell_type": "code",
